examples/test/testpolicy1199.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1199
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key14: value27
      key39: value3
      key17: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value39
      podSelector:
        matchLabels:
          key13: value36
